<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    android:id="@+id/mainActivityFrameLayout">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/edit_message"
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:hint="@string/edit_message"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:onClick="sendMessage"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="200dp">
    <Button
        android:id="@+id/clothes_JSON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_clothes"
        android:onClick="getClothes"/>

    <Button
        android:id="@+id/sign_in_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:onClick="goToSignIn"/>
    </LinearLayout>
</FrameLayout>


