<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayoutSignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3d6b01"
    tools:context=".Interfaces.SignInActivity">

    <LinearLayout
        android:id="@+id/linear_layout_sign_in_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4">
            <TextView
                android:id="@+id/TextViewTitleSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sign_in"
                android:textSize="30pt"
                android:layout_gravity="center_horizontal|top"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">


            <TextView
                android:id="@+id/TextViewEmailSignIn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/email_sign_in"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/EditTextEmail"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/feedback_email_sign_in"
                android:inputType="text"
                android:layout_width="match_parent"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewPasswordSignIn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/password_sign_in"
                android:textSize="25sp"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/EditTextPassword"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/feedback_password_sign_in"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewPasswordRepeatSignIn"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/password_repeat_sign_in"
                android:textSize="25sp"
                android:textColor="#ffffff" />

            <EditText
                android:id="@+id/EditTextPasswordRepeat"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:hint="@string/feedback_password_repeat_sign_in"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:textStyle="italic"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonSignInContinue"
                style="?metaButtonBarButtonStyle"
                android:text="@string/buttonSignInContinue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:background="#95fc46"
                android:textColor="#011397"
                android:onClick="signInStart"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
