<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="diegomezquita.treelife.RecycleInMenuCreateContainerActivity"
    android:background="#E6F8E0"
    android:padding="0dp">

    <!--  <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/contentSignIn"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />-->

    <!-- <LinearLayout
         android:id="@+id/fullscreen_content_controls"
         style="?metaButtonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center_horizontal"
         android:background="@color/black_overlay"
         android:orientation="horizontal"
         tools:ignore="UselessParent">

     </LinearLayout>-->

    <LinearLayout
        android:id="@+id/linear_layout_recycle_in_menu__tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#688A08">

        <!-- Navigation menu -->
        <Button
            android:id="@+id/ButtonSearchByAddressRecycleInMenu"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/button_search_by_address_recycle_in_menu"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|left"
            android:background="#95fc46"
            android:textColor="#011397"
            android:onClick="displaySearchByAddress"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginBottom="1dp"
            android:textSize="20dp" />

        <Button
            android:id="@+id/ButtonHabitualContainersRecycleInMenu"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/button_habitual_container_recycle_in_menu"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|center"
            android:background="#95fc46"
            android:textColor="#011397"
            android:onClick="displayHabitualContainers"
            android:layout_marginLeft="0.5dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="0.5dp"
            android:layout_marginBottom="1dp"
            android:textSize="20dp" />

        <Button
            android:id="@+id/ButtonCreateContainerRecycleInMenu"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/button_create_container_recycle_in_menu"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical|right"
            android:background="#CEF6F5"
            android:textColor="#011397"
            android:onClick="displayCreateContainers"
            android:layout_marginLeft="0.5dp"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:textSize="20dp" />
    </LinearLayout>

    <!-- Location -->
    <LinearLayout
        android:id="@+id/linear_layout_container_creation__where_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|top"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/text_view_container_creation__where"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:keepScreenOn="true"
            android:text="@string/text_view_container_creation__where"
            android:textColor="#000000"
            android:textSize="20dp"
            android:gravity="left"
            android:textAlignment="viewStart"
            android:layout_gravity="bottom|left"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" />

        <Button
            android:id="@+id/ButtonUseLocationContainerCreation"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/button_use_location_container_creation"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="#F78181"
            android:textColor="#011397"
            android:onClick="getCurrentLocation"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_container_creation__where_feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="90dp">

        <EditText
            android:id="@+id/edit_text_container_creation_where_location_feedback"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/feedback_address_container_creation"
            android:background="@drawable/edit_text_bottom_border"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:singleLine="false"
            android:textAlignment="inherit"
            android:textColor="#000000"/>
    </LinearLayout>

    <!-- Title -->
    <LinearLayout
        android:id="@+id/linear_layout_container_creation__title_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|top"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="140dp">

        <TextView
            android:id="@+id/text_view_container_creation__place"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:keepScreenOn="true"
            android:text="@string/text_view_container_creation__place"
            android:textColor="#000000"
            android:textSize="20dp"
            android:gravity="left"
            android:textAlignment="viewStart"
            android:layout_gravity="bottom|left"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_container_creation__place_feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="180dp">

        <EditText
            android:id="@+id/edit_text_container_creation_title_location_feedback"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/feedback_title_container_creation"
            android:background="@drawable/edit_text_bottom_border"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:singleLine="false"
            android:textAlignment="inherit"
            android:textColor="#000000"/>
    </LinearLayout>

    <!-- Type -->
    <LinearLayout
        android:id="@+id/linear_layout_container_creation__type_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|top"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="230dp">

        <TextView
            android:id="@+id/text_view_container_creation__type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:keepScreenOn="true"
            android:text="@string/text_view_container_creation__type"
            android:textColor="#000000"
            android:textSize="20dp"
            android:gravity="left"
            android:textAlignment="viewStart"
            android:layout_gravity="bottom|left"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_container_creation__select_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="270dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_gravity="bottom|top">

            <RadioGroup
                android:id="@+id/feedback_radio_group_recycle_in_menu__type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_gravity="bottom|top"
                android:textColor="#000000">

                <RadioButton
                    android:id="@+id/feedback_radio_button_create_container_recycle_in_menu__glass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_view_create_container_menu__glass"
                    android:layout_above="@+id/button"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/feedback_radio_button_create_container_recycle_in_menu__paper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_view_create_container_menu__paper"
                    android:layout_above="@+id/button"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/feedback_radio_button_create_container_recycle_in_menu__plastic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_view_create_container_menu__plastic"
                    android:layout_above="@+id/button"
                    android:layout_centerHorizontal="true"
                    android:textColor="#000000" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/ButtonCreateContainerRecycleInMenu"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/button_create_new_container_recycle_in_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#95fc46"
        android:textColor="#011397"
        android:onClick="createNewContainer"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
